# octave_FFI

./: .syntastic_cpp_config  CMakeLists.txt  Gcd.hs  Kron.hs  Matmult.hs  embedded  embedded.cc  embedded.oct  foo.cc  kron.cc  matmult.cc
.github/workflows/: codeql-analysis.yml  codeql.yml
