cmake_minimum_required(VERSION 3.10)
project(octave_FFI)
find_library(OCTAVE_LIBRARY NAMES octave)
message("foo ${OCTAVE_LIBRARY}")
find_path(OCTAVE_INCLUDE_DIR NAMES octave/oct.h HINTS /usr/include/*)
message("bar ${OCTAVE_INCLUDE_DIR}")
include_directories(${OCTAVE_INCLUDE_DIR})
include_directories(${OCTAVE_INCLUDE_DIR}/octave)
add_library (matmult matmult.cc)
target_link_libraries(matmult PUBLIC ${OCTAVE_LIBRARY})
